[package]
name = "timetrack"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
colored = "3.0.0"
crossterm = "0.29.0"
ctrlc = "3.4.7"
mac-notification-sys = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
