[package]
name = "timetrack"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre = "0.6.5"
colored = "3.0.0"
crossterm = "0.29.0"
ctrlc = "3.4.7"
mac-notification-sys = "0.6.6"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tui-input = "0.14.0"
